- added busy model - set table to busy until data is loaded - implemented functionality for search field - added segmented button for switching betwee table and chart views

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,16 @@
 /* Enter your custom styles here */
+
+.searchField {
+    width: 25%;
+}
+
+@media all and (max-width: 450px) {
+    .searchField {
+        width: 100%;
+    }
+}
+@media all and (min-width: 450px) and (max-width: 700px) {
+    .searchField {
+        width: 50%;
+    }
+}
